.next/dev/logs/next-development.log
[00:00:00.432] Server  LOG     
[00:00:00.432] Server  LOG        We detected TypeScript in your project and created a tsconfig.json file for you.
[00:00:00.488] Server  LOG      ✓ Ready in 313ms
[00:03:02.745] Server  ERROR    ⨯ ./src/app/global.css
Error evaluating Node.js code
CssSyntaxError: /workspace/src/app/global.css:1:1: The `outline-ring/50` class does not exist. If `outline-ring/50` is a custom class, make sure it is defined within a `@layer` directive.
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at AtRule.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at processApply (/workspace/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:380:29)]
    [at /workspace/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:551:9]
    [at /workspace/node_modules/tailwindcss/lib/processTailwindFeatures.js:55:50]
    [at async plugins (/workspace/node_modules/tailwindcss/lib/plugin.js:38:17)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/global.css [Client Component Browser]
    ./src/app/page.tsx [Client Component Browser]
    ./src/app/page.tsx [Server Component]



./src/app/layout.tsx:1:1
Module not found: Can't resolve './globals.css'
> 1 | import "./globals.css";
    | ^^^^^^^^^^^^^^^^^^^^^^^
  2 |
  3 | export default function RootLayout({
  4 |   children,



https://nextjs.org/docs/messages/module-not-found


[00:04:05.378] Server  LOG      ✓ Compiled in 436ms
[01:59:10.095] Server  WARN     ⚠ Cross origin request detected from 12eeb685636658.lhr.life to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[01:59:10.282] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[01:59:36.090] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:00:31.259] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:02:49.940] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:03:23.111] Server  LOG      ✓ Compiled in 178ms
[02:03:24.553] Browser ERROR   unhandledRejection: undefined
[02:06:14.568] Server  WARN     ⚠ Cross origin request detected from 16d599375ea681.lhr.life to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[02:06:14.730] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:07:21.241] Server  LOG      ✓ Compiled in 123ms
[02:08:33.622] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:09:37.254] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:20:25.949] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[02:22:49.564] Server  LOG      ✓ Compiled in 125ms
[05:50:47.468] Server  WARN     ⚠ Cross origin request detected from 2a2f6b464e933e.lhr.life to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[05:50:47.649] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[22:46:05.583] Server  WARN     ⚠ Cross origin request detected from 3c034dcb130772.lhr.life to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[22:46:05.749] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[22:48:52.897] Server  LOG      ✓ Compiled in 96ms
[22:48:55.185] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[22:48:59.975] Server  LOG      ✓ Compiled in 118ms
